# Midori-AI-Hello

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/audit/: 268ba416-audit-summary.audit.md
.codex/implementation/: aur-packaging.md  cli-entrypoint.md  config-management.md  kde-dbus-lock.md  presence-detection-service.md  profile-encryption.md  screen-lock-manager.md  tui-app-skeleton.md  tui-photo-labeling.md  verbose-file-logging.md  whitelist-tui.md  yolo-training-scheduler.md
.codex/instructions/: 2025-08-16-taskmaster-notes.md
.codex/modes/: CODER.md
.codex/planning/: aur_packaging_review.md  kde_wayland_review.md  plan.md  textual_review.md  yolo_models_review.md
.codex/tasks/: 00a1dfed-aur-package.md  31b76dd4-profile-encryption.md  6e8cfdfd-kde-dbus-lock.md
.codex/tasks/done/: 4e16a0c8-config-management.md  9b275bd5-tui-skeleton.md  a7746be7-screen-lock-state-manager.md  a9fc22ca-presence-detection-service.md  b514abe8-power-inhibitor-helper.md  c57f6a56-whitelist-tui.md
.github/: copilot-instructions.md
aur/: .SRCINFO  PKGBUILD
midori-ai-hello/: __init__.py  __main__.py  app.py  capture_screen.py  config.py  config_screen.py  kde_lock.py  main_menu.py  presence_service.py  screen_lock_manager.py  tui_labeler.py  whitelist.py  whitelist_screen.py  yolo_train.py
src/tests/: test_app.py  test_config.py  test_kde_lock.py  test_logging.py  test_main.py  test_presence_service.py  test_screen_lock_manager.py  test_tui_labeler.py  test_whitelist.py  test_whitelist_screen.py  test_yolo_train.py
(+12 files in other folders)
