[project]
name = "midori-ai-hello"
version = "0.1.0"
authors = [
    { name = "Codex", email = "codex@openai.com" },
    { name = "Luna Midori", email = "midoriaidev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
    "pytest>=8.4.1",
    "dbus-next>=0.2.3",
    "textual>=5.3.0",
    "opencv-python-headless>=4.12.0.88",
    "ultralytics>=8.3.179",
    "pyyaml>=6.0.2",
]

[project.scripts]
"midori-ai-hello" = "midori_ai_hello.__main__:main"
midori_ai_hello = "midori_ai_hello.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["midori_ai_hello"]

[tool.setuptools.package-dir]
midori_ai_hello = "midori-ai-hello"
